Refaktor: Dodanie komponentu Title

--- a/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
+++ b/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
@@ -1,7 +1,7 @@
 ﻿@page "/customers"
 @using Domain.Abstractions
 @using Domain.Models
-
+@using BlazorWebAssemblyApp.Shared
 
 <h3>Customer List</h3>
 
@@ -9,7 +9,7 @@
 
 @if (customers == null)
 {
-    <p><em>Loading...</em></p>
+   <TitleComponent />
 }
 else
 {
