--- a/src/BlazorWebAssemblyApp/Shared/TitleComponent.razor
+++ b/src/BlazorWebAssemblyApp/Shared/TitleComponent.razor
@@ -1,3 +1,9 @@
 ﻿
-<p><em>Loading...</em></p>
+<p><em>@Title</em></p>
+
+@code {
+    [Parameter]
+    public string Title { get; set; } = "Loading...";
+
+}
 
