--- a/src/BlazorWebAssemblyApp/Shared/LoaderComponent.razor
+++ b/src/BlazorWebAssemblyApp/Shared/LoaderComponent.razor
@@ -14,10 +14,10 @@ else
     [Parameter]
     public IEnumerable<TItem> Items { get; set; }
 
-    [Parameter]
-    public string Title { get; set; } = "Loading Items...";
+    [Parameter, EditorRequired]
+    public required string Title { get; set; } = "Loading Items...";
 
-    [Parameter]
-    public RenderFragment ItemsTemplate { get; set; }
+    [Parameter, EditorRequired]
+    public required RenderFragment ItemsTemplate { get; set; }
 
 }
