Dodanie pobierania klientów z Api

--- a/src/BlazorWebAssemblyApp/Pages/Products/List.razor
+++ b/src/BlazorWebAssemblyApp/Pages/Products/List.razor
@@ -1,4 +1,5 @@
 ﻿@page "/products"
+@inject HttpClient http
 @inject IProductRepository repository
 
 <LoaderComponent Items="@products" Title="Loading Products...">
