--- a/src/BlazorWebAssemblyApp/Shared/TitleComponent.razor
+++ b/src/BlazorWebAssemblyApp/Shared/TitleComponent.razor
@@ -2,7 +2,7 @@
 <p><em>@Title</em></p>
 
 @code {
-    [Parameter]
+    [CascadingParameter]
     public string Title { get; set; } = "Loading...";
 
 }
