--- a/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
+++ b/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
@@ -1,20 +1,15 @@
 ﻿@page "/customers"
+@using BlazorWebAssemblyApp.Models
 
 <h3>Customer List</h3>
 
 <p>@message</p>
 
 
-<CascadingValue Value="@title" Name="a">
-    <CascadingValue Value="@description" Name="b">
-
-        <CascadingValue Value="@customerCount">
-            <LoaderComponent Items="@customers">
-                <CustomersTable Customers="@customers" />
-            </LoaderComponent>
-
-        </CascadingValue>
-    </CascadingValue>
+<CascadingValue Value="@info">
+    <LoaderComponent Items="@customers">
+        <CustomersTable Customers="@customers" />
+    </LoaderComponent>
 </CascadingValue>
 
 @code {
@@ -23,4 +18,8 @@
     private int customerCount = 100;
 
     private string description = "Lorem ipsum";
+
+    private Info info => new Info { Title = title, Description = description, Count = customerCount };
+
+   
 }
