Refaktor: Utworzenie komponentu do sterowania trybem z użyciem parametru kaskadowego

--- a/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
+++ b/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
@@ -3,14 +3,19 @@
 
 <h3>Customer List</h3>
 
+
 <p>@message</p>
 
+<ThemeCascadingValue>
 
-<CascadingValue Value="@info">
-    <LoaderComponent Items="@customers">
-        <CustomersTable Customers="@customers" />
-    </LoaderComponent>
-</CascadingValue>
+    <CascadingValue Value="@info">
+        <LoaderComponent Items="@customers">
+            <CustomersTable Customers="@customers" />
+        </LoaderComponent>
+    </CascadingValue>
+
+</ThemeCascadingValue>
+
 
 @code {
     private string title = "Loading Customers...";
@@ -21,5 +26,5 @@
 
     private Info info => new Info { Title = title, Description = description, Count = customerCount };
 
-   
+ 
 }
