Dodanie formularza do edycji klienta

--- a/src/BlazorWebAssemblyApp/Shared/CustomersTable.razor
+++ b/src/BlazorWebAssemblyApp/Shared/CustomersTable.razor
@@ -14,6 +14,7 @@
         <td>@customer.Email</td>
         <td>
             <a class="btn btn-primary" href="/customers/view/@customer.Id">View</a>
+            <a class="btn btn-secondary" href="/customers/edit/@customer.Id">Edit</a>
         </td>
     </RowTemplate>
 </TableTemplate>
