--- a/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
+++ b/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
@@ -22,6 +22,8 @@
 
 <p>SelectedCustomerId: @Filter.SelectedCustomerId</p>
 
+<p>Search Text: @searchText</p>
+
 @code {
 
 
@@ -34,9 +36,14 @@
     private Info info => new Info { Title = title, Description = description, Count = customerCount };
 
 
+    private string searchText;
+
+
     private async Task OnSearch(string text)
     {
         Console.WriteLine($"OnSearch {text} fired!");
+
+        this.searchText = text;
     }
 
     
