Zastosowanie walidacji za pomocą biblioteki FluentValidation

--- a/src/BlazorWebAssemblyApp/Pages/Customers/Edit.razor
+++ b/src/BlazorWebAssemblyApp/Pages/Customers/Edit.razor
@@ -12,7 +12,9 @@ else
 {
     <EditForm Model="@customer" OnValidSubmit="@HandleSubmit">
 
-        <DataAnnotationsValidator />
+        @* <DataAnnotationsValidator /> *@
+
+        <Blazored.FluentValidation.FluentValidationValidator />
 
         <ValidationSummary />
 
