Przykład wywołania funkcji Blazor z JS

--- a/src/BlazorWebAssemblyApp/Pages/Home.razor
+++ b/src/BlazorWebAssemblyApp/Pages/Home.razor
@@ -28,4 +28,10 @@ Welcome to your new app.
 
         confirmResult = result;
     }
+
+    [JSInvokable]
+    public void HelloBlazor()
+    {
+        Console.WriteLine("Hello Blazor!");
+    }
 }
