--- a/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
+++ b/src/BlazorWebAssemblyApp/Pages/Customers/List.razor
@@ -1,5 +1,7 @@
 ﻿@page "/customers"
 @using BlazorWebAssemblyApp.Models
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 
 <h3>Customer List</h3>
 
