--- a/src/BlazorWebAssemblyApp/Layout/NavMenu.razor
+++ b/src/BlazorWebAssemblyApp/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Authorization
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BlazorWebAssemblyApp</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -24,16 +25,26 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="customers">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Customers
-            </NavLink>
-        </div>
+
+        <AuthorizeView>
+
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="customers">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Customers
+                </NavLink>
+            </div>
+
+        </AuthorizeView>
+
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="products">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Products
             </NavLink>
         </div>
+
+
+
     </nav>
 </div>
 
