--- a/src/BlazorWebAssemblyApp/_Imports.razor
+++ b/src/BlazorWebAssemblyApp/_Imports.razor
@@ -16,3 +16,4 @@
 @using BlazorWebAssemblyApp.Services
 
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
