Zmiana wielkości liter Permission na permission

--- a/src/BlazorWebAssemblyApp/Layout/LoginMenu.razor
+++ b/src/BlazorWebAssemblyApp/Layout/LoginMenu.razor
@@ -9,7 +9,7 @@
         <!-- np. "john" -->
 
         <UserRolesBadge />
-        <UserRolesBadge ClaimType="Permission" />
+        <UserRolesBadge ClaimType="permission" />
 
         <button @onclick="@Logout" class="btn btn-danger btn-sm">Logout</button>
     </Authorized>
